# Zhade

./: ..gitattributes.un~  .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Invoke-CompileAndRun.ps1  LICENSE  README.md  compile-and-run.ps1  compile-and-run.sh  vcpkg.json
assets/crytek-sponza/: sponza_3ds.rar  sponza_solution_x64.hierarchy  test.mtl
cmake/: Cleanup.cmake  InSourceCleanup.cmake
lib/stb_image/: stb_image.cpp
src/: .CMakeLists.txt.un~  .Pipeline.hpp.un~  AlignedResource.cpp  AlignedResource.hpp  AmbientLight.cpp  AmbientLight.hpp  App.cpp  App.hpp  AttributeData.cpp  AttributeData.hpp  AttributeDataPool.cpp  AttributeDataPool.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  CMakeLists.txt~  Camera.cpp  Camera.hpp  Common.cpp  Common.hpp  Config.hpp  Constants.cpp  Constants.hpp  DirectionalLight.cpp  DirectionalLight.hpp  Framebuffer.cpp  Framebuffer.hpp  Handle.cpp  Handle.hpp  ITexture.cpp  ITexture.hpp  IndirectRenderer.cpp  IndirectRenderer.hpp  Main.cpp  Main.hpp  Mesh.cpp  Mesh.hpp  MeshFactory.cpp  MeshFactory.hpp  Model.cpp  (+70 more)
src/shaders/: debug.frag  debug.vert  default.frag  default.vert  fshader.glsl  lit.frag  lit.vert  main.frag  main.vert  passthrough.frag  populateBuffers.comp  populateBuffers.comp.glsl  populateDrawIndirectBuffer.comp  shadowMap.vert  shadowMapDirectional.vert  shadow_map.frag  shadow_map.vert  vshader_default.glsl
